# Django_Quotes

./: .gitignore  pyproject.toml
quotes_project/: .env.example  docker-compose.yml
quotes_project/quotes/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
quotes_project/quotes/migrations/: 0001_initial.py  0002_author_is_active.py
quotes_project/quotes/scheduler/: runapscheduler.py
quotes_project/quotes/services/: gpt_service.py
quotes_project/quotes/static/quotes/: bootstrap_min.css  style.css
quotes_project/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  base.html  index.html  info_author.html  tag.html
quotes_project/quotes/templatetags/: extract.py
quotes_project/quotes_project/: settings.py
quotes_project/users/: forms.py  urls.py  views.py
quotes_project/users/templates/users/: login.html  logout.html  register.html
quotes_project/utils/: add_quotes_to_mongo.py  migration_postgre.py
