[tool.poetry]
name = "django-quotes"
version = "0.1.0"
description = ""
authors = ["Serg <https://github.com/CodeCraftSerg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.3.0"
django = "^5.0.3"
python-dotenv = "^1.0.1"
pymongo = "^4.6.2"
psycopg2 = "^2.9.9"
django-apscheduler = "^0.6.2"
openai = "^1.14.2"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
